updated portfolio with all personal details

--- a/src/template.html
+++ b/src/template.html
@@ -17,9 +17,6 @@
     <script>
       ScrollReveal({ reset: false });
     </script>
-
-    <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <body>
@@ -31,10 +28,10 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Brandon Harrington</span>
           <br />
-          I'm a front-end developer.
+          I'm a front-end developer living in Chicago, IL.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Hire Me</a>
+          <a class="cta-btn cta-btn--hero" href="#about">About Me</a>
         </p>
       </div>
     </div>
@@ -61,16 +58,13 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                I am a self-taught front-end developer with a background in Business Analytics. I have worked for 5 years as a Business Analyst and Product Owner, working closely with developers, database analysts, QA, and stakeholders. I decided to take my knowledge of the product-development lifecycle and my passion for learning the latest technologies to transition to web development.
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                I have created several sleek, modern, and responsive web applications, primarily using React. However, I am always trying to learn new technologies. My skills include HTML5, CSS3, JavaScript, React, Node.js, Express.js, SQL, and more.
+              </p>
+              <p class="about-wrapper__info-text">
+                I am currently open to opportunities in the web development space. If you feel like we would be a match, I'd love to hear from you!
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://docs.google.com/document/d/1bFDZd-5z8lCgZCBLkqJpGEEEP2F2uqd-hrG_UzInS2c/edit?usp=sharing">
@@ -99,11 +93,7 @@
                 <h3 class="project-wrapper__text-title">Movies App</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A web app that displays the most popular movies and their rating. Using <a href="https://www.themoviedb.org" target="_blank">The Movie Database API</a>, users can search for a movie of their choice and click on each movie to see more details. This app is built with React.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://brandonmharrington.github.io/movies">
@@ -116,9 +106,9 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://brandonmharrington.github.io/movies" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/movies.png" />
                   </div>
                 </a>
               </div>
@@ -133,11 +123,7 @@
                 <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A web app built using React. Displays a list of robot friends which updates real-time as the user searches.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://brandonmharrington.github.io/robofriends">
@@ -150,9 +136,9 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://brandonmharrington.github.io/robofriends" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/robofriends.png" />
                   </div>
                 </a>
               </div>
@@ -167,11 +153,7 @@
                 <h3 class="project-wrapper__text-title">Pokedex</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A Pokedex web app that shows a Pokemon and their stats. Using the <a href="https://pokeapi.co/" target="_blank">PokeAPI</a>, users can search for a Pokemon, choose a random Pokemon, and click through to the previous and next Pokemon by number. This app is built using React.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://brandonmharrington.github.io/pokedex">
@@ -184,9 +166,9 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://brandonmharrington.github.io/pokedex" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/pokédex.png" />
                   </div>
                 </a>
               </div>
@@ -206,13 +188,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            Interested in connecting?
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:brandonmharrington@gmail.com"
+            >Email Me</a
           >
         </div>
       </div>
@@ -222,17 +204,11 @@
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a href="#top" class="back-to-top">
+        <a href="#top" class="top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="https://linkedin.com/brandon-harrington-3v" target="_blank">
+        <div class="social">
+          <a href="https://linkedin.com/in/brandon-harrington-3v" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a href="https://github.com/brandonmharrington" target="_blank">
