add smart brain project

--- a/src/template.html
+++ b/src/template.html
@@ -175,6 +175,36 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Smart Brain</h3>
+                <div>
+                  <p class="mb-4">
+                    Full-stack facial recognition web app built using React front-end, Express back-end, and PostgreSQL for the database. Using the <a href="https://clarifai.com" target="_blank">Clarifai</a> face detection API, users can input an image and watch the AI label the face in the image.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://smart-brain-bmh.herokuapp.com/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="#">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://smart-brain-bmh.herokuapp.com/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div>
     </section>
