added image for smart-brain project

--- a/src/template.html
+++ b/src/template.html
@@ -183,7 +183,7 @@
                 <h3 class="project-wrapper__text-title">Smart Brain</h3>
                 <div>
                   <p class="mb-4">
-                    Full-stack facial recognition web app built using React front-end, Express back-end, and PostgreSQL for the database. Using the <a href="https://clarifai.com" target="_blank">Clarifai</a> face detection API, users can input an image and watch the AI label the face in the image.
+                    Full-stack facial recognition web app built using React front-end, Express back-end, and PostgreSQL for the database. Using the <a href="https://clarifai.com" target="_blank">Clarifai</a> facial recognition API, users can input an image and watch the AI label the face in the image.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://smart-brain-bmh.herokuapp.com/">
@@ -198,7 +198,7 @@
               <div class="project-wrapper__image">
                 <a href="https://smart-brain-bmh.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="" />
+                    <img class="img-fluid" src="./assets/smart-brain.png" />
                   </div>
                 </a>
               </div>
